<resources>
    <string name="app_name">DelightCart</string>
    <string name="samsung_galaxy_s20">Samsung Galaxy s20</string>
    <string name="products">Products</string>
    <string name="_888_inr">%s INR</string>
    <string name="save_up_to">save up to %s%s</string>
    <string name="buy">BUY</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_image">login Image</string>
    <string name="hello_there_welcome_back">Hello There, Welcome Back</string>
    <string name="sign_in_to_continue">Sign In To Continue</string>
    <string name="signin_activity">SignIn Activity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="go">Go</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="vinayak_soni">Vinayak Soni</string>
    <string name="update">Update</string>
    <string name="contact_number">Contact Number</string>
    <string name="full_name">Full Name</string>
    <string name="vinayak_55">vinayak_55</string>
    <string name="_123">$123</string>
    <string name="_40">40</string>
    <string name="todo">To Do\n</string>
    <string name="otp_code_text">CODE</string>
    <string name="otp_verification_text">VERIFICATION</string>
    <string name="otp_description_text">ENTER ONE TIME PASSWORD SEND TO \n%s</string>
    <string name="verify_code">Verify Code</string>
    <string name="profile_ui">Profile UI</string>
    <string name="fullAddress">%s %s</string>

    <string name="mobileCategoryName">Mobile</string>
    <string name="furnitureCategoryName">Furniture</string>
    <string name="tabletCategoryName">Tablet</string>
    <string name="electronicsCategoryName">Electronic</string>
    <string name="laptopsCategoryName">Laptops</string>
    <string name="clothesCategoryName">Clothe</string>

    <string name="test">test</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="explore">Explore</string>
    <string name="orders">Orders</string>
    <string name="search">Search</string>
    <string name="wishlist">WishList</string>
    <string name="cart">Cart</string>
    <string name="wallet">Wallet</string>
    <string name="electronics">ELECTRONICS</string>
    <string name="title">Title</string>
    <string name="clothes">Clothes</string>
    <string name="create_account">Create Account</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="next">NEXT</string>
    <string name="log_in">Log In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select_age">Select Age</string>
    <string name="details">Details</string>
    <string name="product_details">Product Details</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="ratingText">[%s]</string>
    <string name="description">Description</string>
    <string name="lorenInpsum">loren Inpum Text loren Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum T Inpum Text Inpum Text Inpum Text Inpum Text Inpum Textext Inpum Text Inpum Text Inpum T Inpum Textext Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text Inpum Text</string>
    <string name="similar_product">Similar Product</string>
    <string name="total_price">Total Price</string>
    <string name="productPrice">&#x20B9; %d</string>
    <string name="productsTotalPrice">&#x20B9; %d</string>
    <string name="cartProductPrice">&#x20B9; %d</string>
    <string name="cartTotalPrice">&#x20B9; %d</string>
    <string name="userFullName">%s %s</string>
    <string name="best_selling">BEST SELLING</string>
    <string name="watches">Watches</string>
    <string name="sign_in">Sign In</string>
    <string name="back">Back</string>

    //Headings
    <string name="heading_one">Quick &amp; Easy Payments</string>
    <string name="heading_two">Instant Notifications</string>
    <string name="heading_three">Cashless Payment</string>
    <string name="heading_fourth">Pay Anywhere</string>

    //Description
    <string name="desc_one">Grow your Business By Accepting Card Payments with The New Card Reader</string>
    <string name="desc_two">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_three">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="desc_fourth">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</string>
    <string name="onboarding_screen">Onboarding Screen</string>
    <string name="skip">Skip</string>
    <string name="title_activity_cart">CartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="my_cart">My Cart</string>
    <string name="order_summary">Order Summary</string>
    <string name="text_view">Text View</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery">Delivery</string>
    <string name="total_tax">Total Tax</string>
    <string name="inr_symbol">&#x20B9;</string>
    <string name="subTotalValue">%d &#x20B9;</string>
    <string name="total">Total</string>
    <string name="information">Information</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="india">India</string>
    <string name="payment_method">Payment Method</string>
    <string name="order_now">Order Now</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="cart_activity">Cart Activity</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="best_deals">Best Deals</string>
    <string name="product_adder">Product Adder</string>
    <string name="color">Colors</string>
    <string name="size">Sizes</string>
    <string name="product_name">Product Name</string>
    <string name="check_out">Check out</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="phone">Phone</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="addresses">Addresses</string>
    <string name="edit_personal_details">edit personal details</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="name">Name</string>
    <string name="all_orders">All orders</string>
    <string name="billing">Billing</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="see_product">See product</string>
    <string name="search_now">Search Now</string>
    <string name="cancel">Cancel</string>
    <string name="categories">Categories</string>
    <string name="or">OR</string>

    <string name="default_web_client_id">716680218843-ng9h6kjv9h8jg5pde2ci1gf5f9oe1blj.apps.googleusercontent.com</string>
    <string name="signin_as_admin">SignIn As Admin?</string>
    <string name="sign_in_as_admin">Sign In As Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delightcart">DelightCart</string>
    <string name="_0">0</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="order_confirmed_successfully">Order confirmed successfully</string>
</resources>
