<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivities.SignUpUserDetailsActivity"
    android:background="@color/colorPrimary"
    android:padding="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:id="@+id/signUpBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/baseline_back_24"
            android:transitionName="transition_back_arrow_button">
            
        </ImageView>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:fontFamily="@font/muli_black"
            android:textAllCaps="true"
            android:layout_marginTop="10dp">
        </TextView>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            
            <EditText
                android:id="@+id/signUpUserFirstName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/enter_first_name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:background="#6090B5"
                android:inputType="text">
            </EditText>

            <EditText
                android:id="@+id/signUpUserLastName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_last_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:background="#6090B5"
                android:inputType="text">
            </EditText>

            <EditText
                android:id="@+id/signUpUserEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_email"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:background="#6090B5"
                android:inputType="textEmailAddress">
            </EditText>

            <EditText
                android:id="@+id/signUpUserPhone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:background="#6090B5"
                android:inputType="phone">
            </EditText>

            <EditText
                android:id="@+id/signUpUserPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:hint="@string/enter_password"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:background="#6090B5"
                android:inputType="textPassword">
            </EditText>
            
        </LinearLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signupNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="@string/next"
            android:layout_gravity="center"
            android:textColor="@color/black"
            app:spinning_bar_color="@color/colorPrimary">

        </com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton>
        
        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signupLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#00000000"
            android:fontFamily="@font/muli"
            android:text="@string/log_in"
            android:textColor="@color/white" />

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signupAsAdminButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:text="@string/signin_as_admin"
            android:layout_gravity="center"
            android:textColor="@color/black"
            app:spinning_bar_color="@color/colorPrimary">

        </com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton>
        
    </LinearLayout>
</ScrollView>