<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="420dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="4dp"
    android:background="@color/white"
    android:elevation="20dp"
    android:layout_margin="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="155dp"
            android:layout_height="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/modelName"
            android:layout_width="175dp"
            android:layout_height="31dp"
            android:layout_marginTop="12dp"
            android:text="@string/samsung_galaxy_s20"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.329"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productImage" />

        <TextView
            android:id="@+id/price"
            android:layout_width="175dp"
            android:layout_height="35dp"
            android:layout_marginTop="184dp"
            android:text="@string/_888_inr"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="186dp"
            android:layout_height="46dp"
            android:layout_marginTop="260dp"
            style="@style/ShapeAppearance.MaterialComponents.SmallComponent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.352"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/discountSaveText"
            android:layout_width="135dp"
            android:layout_height="23dp"
            android:layout_marginTop="228dp"
            android:text="@string/save_up_to"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.283"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buyButton"
            style="@style/DelightCartButton"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:layout_marginTop="316dp"
            android:text="@string/buy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.345"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addToCartButton"
            style="@style/DelightCartButton"
            android:layout_width="185dp"
            android:layout_height="40dp"
            android:layout_marginTop="364dp"
            android:text="@string/add_to_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.337"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>