<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="30dp"
    tools:context=".Activities.SignInActivities.AdminSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/signInAdminBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/baseline_back_24"
            android:transitionName="transition_back_arrow_button">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/sign_in_as_admin"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signInAdminFirstName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#6090B5"
                android:gravity="center"
                android:hint="@string/enter_first_name"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"></EditText>


            <EditText
                android:id="@+id/signInAdminPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="#6090B5"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp"></EditText>

        </LinearLayout>

        <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/signInAdminNextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:text="@string/next"
            android:textColor="@color/black"
            app:spinning_bar_color="@color/colorPrimary">

        </com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton>

    </LinearLayout>
</ScrollView>